WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90588
[BlackBerry] Fix the build error introduced by enabling CUSTOM_THEME_HANDLER
https://bugs.webkit.org/show_bug.cgi?id=90588
Summary
[BlackBerry] Fix the build error introduced by enabling CUSTOM_THEME_HANDLER
Charles Wei
Reported
2012-07-04 22:40:46 PDT
The BlackBerry porting fails build after enabling CUSTOM_THEME_HANDLER.
Attachments
Patch
(1.79 KB, patch)
2012-07-04 22:46 PDT
,
Charles Wei
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Charles Wei
Comment 1
2012-07-04 22:46:23 PDT
Created
attachment 150878
[details]
Patch
Rob Buis
Comment 2
2012-07-05 06:52:13 PDT
Comment on
attachment 150878
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-07-05 18:06:03 PDT
Comment on
attachment 150878
[details]
Patch Clearing flags on attachment: 150878 Committed
r121931
: <
http://trac.webkit.org/changeset/121931
>
WebKit Review Bot
Comment 4
2012-07-05 18:06:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug