[BlackBerry] Fix the build error introduced by enabling CUSTOM_THEME_HANDLER https://bugs.webkit.org/show_bug.cgi?id=90588

Reviewed by Rob Buis.

Fix the build error introduced by enabling CUSTOM_THEME_HANDLER.
* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::isProtocolHandlerRegistered):


Canonical link: https://commits.webkit.org/108489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121931 268f45cc-cd09-0410-ab3c-d52691b4dbfc